# FVHIoT-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-flask.txt  requirements-kafka.txt  requirements-starlette.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-package.yml  ci.yml
fvhiot/database/: influxdb.py  mongodb.py
fvhiot/database/legacy/: influxdb_v1.py
fvhiot/models/: device.py  ekoevcharging.py  mongodb.py  parsed.py  requests.py  thingpark.py
fvhiot/parsers/: README.md  __init__.py  dlmbx.py  dlpm.py  dlsoil.py  dltbrg.py  ekoevcharging.py  elsys.py  energiaburk.py  fvhgeneric.py  helpers.py  iotpetri.py  iotpetrignss.py  lht65.py  marjetas.py  mcf88.py  meteohelix.py  milesight.py  paxcounter.py  sensecap_s210x.py  sensornode.py  sentilo.py  sompasensecap.py
fvhiot/utils/: __init__.py  aiokafka.py  aiormq.py  data.py  http.py  kafka.py
fvhiot/utils/http/: __init__.py  flasktools.py  starlettetools.py
fvhiot/utils/lorawan/: thingpark.py
tests/: test_parsers.py
