[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

[project]
name = "FVHIoT"
description = "Utilities for FVH's IoT projects"
readme = "README.md"
requires-python = ">=3.9"
version = "0.4.0"
authors = [
    { name = "Aapo Rista", email = "aapo.rista@forumvirium.fi" },
    { name = "Aapo Rista", email = "aapris@gmail.com" }
]

# See setup.cfg for dependencies
#dependencies = [
#    'aiokafka',
#    'certifi',
#    'Flask',
#    'msgpack',
#    'starlette',
#]
