[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[project]
name = "FVHIoT"
description = "Utilities for FVH's IoT projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aapo Rista", email = "aapo.rista@forumvirium.fi" },
    { name = "Aapo Rista", email = "aapris@gmail.com" }
]
version = "1.0.0"

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff", "pre-commit"]
flask = ["Flask"]
kafka = ["aiokafka", "msgpack", "certifi"]
starlette = ["starlette"]

[project.urls]
Repository = "https://github.com/ForumVirium/FVHIoT-Python"
